# dpu_trees

./: .clangd  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  notes.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: conf.py
docs/_generate/: dpu_trees.add.rst  dpu_trees.call_home.rst  dpu_trees.dpu_test.rst  dpu_trees.subtract.rst
src/: common.h  main.cpp  trees.c  trees.h  trees_common.h
src/c/: cluster.c  dpu_management.c  input.c  splitter.c
src/c/dpu_program/: CMakeLists.txt  trees_dpu_kernel.c
src/dpu_program/: CMakeLists.txt
src/dpu_trees/: __init__.py  _checksum.py  base_tree.py
src/host_program/: dpu_management.c  preprocessing.c  tree_structure.c
tests/: test_basic.py
